# ply

./: .gitignore  CHANGELOG  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EVIDENCE.md  GOVERNANCE.md  LICENSE  Makefile  README.md  REPORT.md  SECURITY.md  STANDARDS.md  SUPPORT.md  cabal.project  cabal.project.core  cabal.project.plutarch  flake.nix  spago.dhall
example/: example.cabal  flake.nix
example/common/Example/: Type.hs
example/compiled/: nftMp.plutus
example/compiler-app/: Main.hs
example/offchain/: cabal.project  example-offchain.cabal
example/offchain/app/: Main.hs
example/offchain/src/Example/: Nft.hs
example/onchain/: example-onchain.cabal
example/onchain/app/: Main.hs
example/onchain/src/Example/: NftM.hs
example/reader-app/: Main.hs
example/src/Example/: NftM.hs
genPurs/: Main.hs  genPurs.cabal
ply-core/: .envrc  cabal.project  ply-core.cabal
ply-core/src/: Ply.hs
ply-core/src/Ply/: LedgerExports.hs
ply-core/src/Ply/Core/: Apply.hs  Class.hs  Deserialize.hs  Schema.hs  Serialize.hs  TypedReader.hs  Typename.hs  Types.hs  UPLC.hs  Unsafe.hs
ply-core/src/Ply/Core/Internal/: Reify.hs
ply-core/src/Ply/Core/Schema/: Description.hs  Normalize.hs  Types.hs
ply-core/src/Ply/Core/Serialize/: Script.hs
ply-core/src/Ply/LedgerExports/: Common.hs  V1.hs  V2.hs
ply-core/test/: Spec.hs
ply-core/test/Property/: PlyArg.hs
ply-core/test/Unit/: Schema.hs
ply-core/test/schemas/: 001.json
ply-ctl/: Main.hs  package-lock.json  package.json  packages.dhall  ply-ctl.cabal  spago.dhall
ply-ctl/application-test/: ApplicationTest.js  ApplicationTest.purs  Main.hs
ply-ctl/application-test/compiled/: SampleA.plutus  SampleB.plutus
ply-ctl/genPurs/: Main.hs
ply-ctl/src/: Main.purs
ply-ctl/src/Ply/: Apply.purs  Reify.purs  TypeList.purs  Typename.purs  Types.purs
ply-plutarch/: .envrc  cabal.project  ply-plutarch.cabal
ply-plutarch/src/Ply/: Plutarch.hs
ply-plutarch/src/Ply/Plutarch/: Class.hs  TypedWriter.hs
ply-plutarch/test/: Spec.hs
ply-test-core/: cabal.project  flake.nix  ply-test-core.cabal
ply-test-core/tests/: Spec.hs
