cabal-version: 3.0
name:          ply-core
version:       0.7.1
author:        Chase <chase@mlabs.city>
license:       MIT

-- Common sections

common common-configs
  default-language: GHC2021

common common-ghc-opts
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wno-unused-do-bind
    -Wno-partial-type-signatures -Wmissing-export-lists -Werror
    -Wincomplete-record-updates -Wmissing-deriving-strategies
    -Wno-name-shadowing -Wunused-foralls -Werror -Wunused-packages
    -Wmissing-import-lists -Wno-unticked-promoted-constructors
    -fprint-explicit-foralls -fprint-explicit-kinds

common common-deps
  build-depends:
    , aeson
    , base
    , containers
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , text

common common-lang
  default-extensions:
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    RoleAnnotations
    TypeFamilyDependencies
    ViewPatterns

-- Build targets

library
  import:          common-lang
  import:          common-configs
  import:          common-deps
  import:          common-ghc-opts
  build-depends:
    , aeson-pretty
    , base16-bytestring
    , bytestring
    , cardano-binary
    , transformers

  exposed-modules:
    Ply
    Ply.Core.Apply
    Ply.Core.Class
    Ply.Core.Deserialize
    Ply.Core.Internal.Reify
    Ply.Core.Schema
    Ply.Core.TypedReader
    Ply.Core.Unsafe

  other-modules:
    Ply.Core.Schema.Description
    Ply.Core.Schema.Normalize
    Ply.Core.Types
    Ply.Core.UPLC

  hs-source-dirs:  src

test-suite ply-core-test
  import:         common-lang
  import:         common-configs
  import:         common-deps
  import:         common-ghc-opts
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  build-depends:
    , base
    , plutarch-orphanage
    , ply-core
    , tasty
    , tasty-hunit
    , tasty-quickcheck

  other-modules:
    Property.PlyArg
    Unit.Schema

  hs-source-dirs: test
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
