cabal-version: 3.0
name:          ply-ctl
version:       0.4.0
author:        Seungheon <Seungheon@mlabs.city>
license:       MIT

-- Common sections

common common-configs
  default-language: Haskell2010

common common-ghc-opts
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wno-unused-do-bind
    -Wno-partial-type-signatures -Wmissing-export-lists -Werror
    -Wincomplete-record-updates -Wmissing-deriving-strategies
    -Wno-name-shadowing -Wunused-foralls
    -Wno-unticked-promoted-constructors -fprint-explicit-foralls
    -fprint-explicit-kinds

common common-deps
  build-depends:
    , base
    , bytestring
    , containers
    , plutarch
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , ply-core
    , text

common common-lang
  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    PatternGuards
    PatternSynonyms
    PolyKinds
    PostfixOperators
    RankNTypes
    RelaxedPolyRec
    RoleAnnotations
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeFamilyDependencies
    TypeOperators
    ViewPatterns

executable genPurs
  import:         common-lang
  import:         common-configs
  import:         common-deps
  import:         common-ghc-opts
  hs-source-dirs: genPurs
  main-is:        Main.hs

test-suite application
  import:         common-lang
  import:         common-configs
  import:         common-deps
  import:         common-ghc-opts
  type:           exitcode-stdio-1.0
  build-depends:
    , base16-bytestring
    , data-default
    , filepath
    , ply-plutarch
    , process
    , QuickCheck
    , tasty
    , tasty-quickcheck

  hs-source-dirs: application-test
  main-is:        Main.hs  
